src/components/markdownRenderer/markdown-renderer.module.css
.markdown h1 {
    font-size: 48px;
    color: black;
    text-decoration: underline;
    text-decoration-skip-ink: none;
    text-decoration-thickness: 48px;
    text-underline-offset: -40px;
    text-decoration-color: #7cf952;
}

.markdown h2 {
    font-size: 48px;
    color: black;
}

.markdown h3 {
    font-size: 32px;
    color: black;
    text-decoration: underline;
    text-decoration-thickness: 2px;
    text-underline-offset: 5px;
    text-decoration-color: #7cf952;
}

.markdown h4 {
    font-size: 32px;
    color: black;
}

.markdown h5 {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: black;
}

.markdown p {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: gray;
}

.markdown a {
    text-decoration: underline;
    color: #54c203;
}

.markdown pre {
    font: inherit;
}

.markdown code {
    white-space: pre;
    text-decoration: none !important;
    text-decoration-color: white;
}

.markdown ul {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: gray;
    margin-left: 30px;
}

.markdown ol {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: gray;
    margin-left: 30px;
}

.markdown .paragraph {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: gray;
}

.markdown blockquote {
    color: gray;
    border-left: 1px solid gray;
    margin: 5px;
    padding: 5px;
}
.markdown div {
    display: flex;
    flex-direction: row;
}
.markdown strong {
    display: inline;
}
.markdown em {
    display: inline;
}

.markdown .newline {
    height: 15px;
}

.markdown .md-row {
    display: flex;
    flex-direction: row;
}

.markdown div {
    white-space: pre-wrap;
}

